[package]
name = "cfd-engine-sb-contracts"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-service-bus",
    "macros",
] }

serde = { version = "*", features = ["derive"] }

prost = "*"
prost-types = "*"
